terraform/subnets.tf
resource "aws_subnet" "public" {
    count = var.availability_zones_count

    vpc_id = aws_vpc.vpc.id
    cidr_block = cidrsubnet(var.vpc_cidr, var.subnet_cidr_bits, count.index)
    availability_zone = data.aws_availability_zones.available.names[count.index]

    tags = {
        Name = "${var.project}-public"
        "kubernetes.io/cluster/${var.project}-cluster" = "shared"
        "kubernetes.io/role/elb" = "1"
    }

    map_public_ip_on_launch = true
}

resource "aws_subnet" "private" {
    count = var.availability_zones_count

    vpc_id = aws_vpc.vpc.id
    cidr_block = cidrsubnet(var.vpc_cidr, var.subnet_cidr_bits, count.index + var.availability_zones_count)
    availability_zone = data.aws_availability_zones.available.names[count.index]

    tags = {
        Name = "${var.project}-private"
        "kubernetes.io/cluster/${var.project}-cluster" = "shared"
        "kubernetes.io/role/internal-elb" = "1"
    }
}
